--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
-  "name": "new-portfolio-application",
+  "name": "@figma/my-make-file",
   "private": true,
-  "version": "1.0.0",
+  "version": "0.0.1",
   "type": "module",
-  "homepage": "https://abhaydubey200.github.io/New_Portfolio_Application/",
   "scripts": {
-    "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
+    "dev": "vite",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
@@ -74,5 +72,22 @@
     "gh-pages": "^6.3.0",
     "tailwindcss": "4.1.12",
     "vite": "6.3.5"
+  },
+  "peerDependencies": {
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
+  },
+  "peerDependenciesMeta": {
+    "react": {
+      "optional": true
+    },
+    "react-dom": {
+      "optional": true
+    }
+  },
+  "pnpm": {
+    "overrides": {
+      "vite": "6.3.5"
+    }
   }
 }
